--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
   top: 0;
   left: 0;
   margin: 0;
+  font-size: 1em;
 }
 
 h1 {
@@ -86,7 +87,7 @@ li {
 h2 {
   color: lightseagreen;
   display: flex;
-  justify-content: center;
+  align-items: center;
   font-size: 5rem;
   /* border: 5px solid orangered; */
   padding: 0.75em;
@@ -98,6 +99,4 @@ h2 {
   padding: 1em;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
 }
