--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@
 
 h1 {
   font-size: 3rem;
-  /* color: rgb(230, 197, 8); */
   color: blanchedalmond;
 }
 
@@ -110,4 +109,9 @@ h2 {
 
 #ingredients > .section::before { 
   left: var(--space-xl-3xl);
+}
+
+button {
+  width: 100%;
+  height: 5em;
 }
