--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ a {
   text-align: left;
   padding: 1.2rem;
   counter-reset: section-counter;
+  display: flex;
 }
 
 .container {
@@ -114,4 +115,13 @@ h2 {
 button {
   width: 100%;
   height: 5em;
+}
+
+.card {
+margin-block: 5rem;
+}
+
+.card-img-top {
+  max-width: 15rem;
+  max-height: 12rem;
 }
