--- a/style.css
+++ b/style.css
@@ -23,10 +23,11 @@ a {
   text-wrap: wrap;
 }
 
-.navbar {
+.header {
   display: flex;
   justify-content: center;
   background-color: brown;
+  max-height: 5em;
 }
 
 .img {
@@ -138,4 +139,15 @@ border-radius: 2em;
   text-align: center;
   padding-bottom: 1em;
   color: brown;
+}
+
+nav {
+  position: relative;
+  bottom: 0;
+  background-color: brown;
+  color: blanchedalmond;
+  height: 5em;
+  width: 100%;
+  text-align: center;
+  padding-block: 1.5em;
 }
