--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ a {
   text-align: left;
   padding: 1.2rem;
   counter-reset: section-counter;
-  display: flex;
+  /* display: flex; */
 }
 
 .container {
@@ -150,4 +150,19 @@ nav {
   width: 100%;
   text-align: center;
   padding-block: 1.5em;
+}
+
+.content {
+  background: blanchedalmond;
+  text-align: left;
+  padding: 1.2rem;
+  counter-reset: section-counter;
+  display: flex;
+}
+
+@media (max-width: 992px) {
+   .content {
+    flex-direction: column;
+    align-items: center;
+  }
 }
